Add tests for reload key method