@@ -1,8 +1,13 @@
 package io.quarkus.test.common;
 
+import static io.quarkus.test.common.TestResourceManager.testResourcesReloadKey;
 import static io.quarkus.test.common.TestResourceManager.testResourcesRequireReload;
-import static io.quarkus.test.common.TestResourceScope.*;
+import static io.quarkus.test.common.TestResourceScope.GLOBAL;
+import static io.quarkus.test.common.TestResourceScope.MATCHING_RESOURCES;
+import static io.quarkus.test.common.TestResourceScope.RESTRICTED_TO_CLASS;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Collections;
@@ -16,72 +21,77 @@ public class TestResourceManagerReloadTest {
 
     @Test
     public void emptyResources() {
-        assertFalse(testResourcesRequireReload(Collections.emptySet(), Set.of()));
+        Set<TestResourceComparisonInfo> existing = Collections.emptySet();
+        Set<TestResourceComparisonInfo> next = Set.of();
+        assertFalse(testResourcesRequireReload(existing, next));
+        assertEquals(testResourcesReloadKey(existing), testResourcesReloadKey(next));
     }
 
     @Test
     public void differentCount() {
-        assertTrue(testResourcesRequireReload(Collections.emptySet(),
-                Set.of(new TestResourceComparisonInfo("test", RESTRICTED_TO_CLASS))));
+        Set<TestResourceComparisonInfo> existing = Collections.emptySet();
+        Set<TestResourceComparisonInfo> next = Set.of(new TestResourceComparisonInfo("test", RESTRICTED_TO_CLASS));
 
-        assertTrue(testResourcesRequireReload(Set.of(new TestResourceComparisonInfo("test", RESTRICTED_TO_CLASS)),
-                Collections.emptySet()));
+        assertTrue(testResourcesRequireReload(existing, next));
+        assertTrue(testResourcesRequireReload(next, existing));
+
+        assertNotEquals(testResourcesReloadKey(existing), testResourcesReloadKey(next));
     }
 
     @Test
     public void sameSingleRestrictedToClassResource() {
-        assertTrue(testResourcesRequireReload(
-                Set.of(new TestResourceComparisonInfo("test", RESTRICTED_TO_CLASS)),
-                Set.of(new TestResourceComparisonInfo("test", RESTRICTED_TO_CLASS))));
+        Set<TestResourceComparisonInfo> existing = Set.of(new TestResourceComparisonInfo("test", RESTRICTED_TO_CLASS));
+        Set<TestResourceComparisonInfo> next = Set.of(new TestResourceComparisonInfo("test", RESTRICTED_TO_CLASS));
+        assertTrue(testResourcesRequireReload(existing, next));
+
+        assertNotEquals(testResourcesReloadKey(existing), testResourcesReloadKey(next));
     }
 
     @Test
     public void sameSingleMatchingResource() {
-        assertFalse(testResourcesRequireReload(
-                Set.of(new TestResourceComparisonInfo("test", MATCHING_RESOURCES)),
-                Set.of(new TestResourceComparisonInfo("test", MATCHING_RESOURCES))));
+        Set<TestResourceComparisonInfo> existing = Set.of(new TestResourceComparisonInfo("test", MATCHING_RESOURCES));
+        Set<TestResourceComparisonInfo> next = Set.of(new TestResourceComparisonInfo("test", MATCHING_RESOURCES));
+
+        assertFalse(testResourcesRequireReload(existing, next));
+
+        assertEquals(testResourcesReloadKey(existing), testResourcesReloadKey(next));
     }
 
     @Test
     public void differentSingleMatchingResource() {
-        assertTrue(testResourcesRequireReload(
-                Set.of(new TestResourceComparisonInfo("test", MATCHING_RESOURCES)),
-                Set.of(new TestResourceComparisonInfo("test2", MATCHING_RESOURCES))));
+        Set<TestResourceComparisonInfo> existing = Set.of(new TestResourceComparisonInfo("test", MATCHING_RESOURCES));
+        Set<TestResourceComparisonInfo> next = Set.of(new TestResourceComparisonInfo("test2", MATCHING_RESOURCES));
+        assertTrue(testResourcesRequireReload(existing, next));
+
+        assertNotEquals(testResourcesReloadKey(existing), testResourcesReloadKey(next));
     }
 
     @Test
     public void sameMultipleMatchingResource() {
-        assertFalse(testResourcesRequireReload(
-                Set.of(
-                        new TestResourceComparisonInfo("test", MATCHING_RESOURCES),
-                        new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
-                        new TestResourceComparisonInfo("test3", GLOBAL)),
-                Set.of(new TestResourceComparisonInfo("test3", GLOBAL),
-                        new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
-                        new TestResourceComparisonInfo("test", MATCHING_RESOURCES))));
+        Set<TestResourceComparisonInfo> existing = Set.of(
+                new TestResourceComparisonInfo("test", MATCHING_RESOURCES),
+                new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
+                new TestResourceComparisonInfo("test3", GLOBAL));
+        Set<TestResourceComparisonInfo> next = Set.of(new TestResourceComparisonInfo("test3", GLOBAL),
+                new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
+                new TestResourceComparisonInfo("test", MATCHING_RESOURCES));
+
+        assertFalse(testResourcesRequireReload(existing, next));
+        assertEquals(testResourcesReloadKey(existing), testResourcesReloadKey(next));
+
     }
 
     @Test
     public void differentMultipleMatchingResource() {
-        assertTrue(testResourcesRequireReload(
-                Set.of(
-                        new TestResourceComparisonInfo("test", MATCHING_RESOURCES),
-                        new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
-                        new TestResourceComparisonInfo("test3", GLOBAL)),
-                Set.of(new TestResourceComparisonInfo("test3", GLOBAL),
-                        new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
-                        new TestResourceComparisonInfo("TEST", MATCHING_RESOURCES))));
-    }
-
-    @Test
-    public void differentGlobalMultipleMatchingResource() {
-        assertTrue(testResourcesRequireReload(
-                Set.of(
-                        new TestResourceComparisonInfo("test", MATCHING_RESOURCES),
-                        new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
-                        new TestResourceComparisonInfo("test4", GLOBAL)),
-                Set.of(new TestResourceComparisonInfo("test3", GLOBAL),
-                        new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
-                        new TestResourceComparisonInfo("TEST", MATCHING_RESOURCES))));
+        Set<TestResourceComparisonInfo> existing = Set.of(
+                new TestResourceComparisonInfo("test", MATCHING_RESOURCES),
+                new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
+                new TestResourceComparisonInfo("test3", GLOBAL));
+        Set<TestResourceComparisonInfo> next = Set.of(new TestResourceComparisonInfo("test3", GLOBAL),
+                new TestResourceComparisonInfo("test2", MATCHING_RESOURCES),
+                new TestResourceComparisonInfo("TEST", MATCHING_RESOURCES));
+        assertTrue(testResourcesRequireReload(existing, next));
+        assertNotEquals(testResourcesReloadKey(existing),
+                testResourcesReloadKey(next));
     }
 }
